--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -216,7 +216,8 @@
         position: fixed;
         top: 60px;
         left: 0;
-        width: 100%;
+        right: 0;
+        width: 100vw;
         height: calc(100vh - 60px);
         background: var(--background-white);
         flex-direction: column;
